Saving session_id to config file on login.  Attempting re-login on bad session.

--- a/projects/lacuna/config/lacuna.cfg
+++ b/projects/lacuna/config/lacuna.cfg
@@ -1,15 +1,18 @@
 
-[DEFAULT]
-user    = tmtowtdi
-server  = pt
-api_key = perl6 default section API key
-
-[real]
-pass    = bookshelf lamp
-
 [sitter]
-pass    = hi vas
+pass=hi vas
+
+[DEFAULT]
+api_key=perl6 default section API key
+server=pt
+user=tmtowtdi
 
 [phony]
-pass    = blarg
+pass=blarg
 
+[real]
+api_key=perl6 default section API key
+pass=bookshelf lamp
+server=pt
+session_id=4b80049b-dbe1-445d-b95f-a9f9c2066610
+user=tmtowtdi
