--- a/modules/NativeCall/libcsv-3.0.3/Makefile
+++ b/modules/NativeCall/libcsv-3.0.3/Makefile
@@ -213,7 +213,7 @@ htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
 install_sh = ${SHELL} /home/jon/work/rakudo/projects/process_file_in_chunks/libcsv-3.0.3/install-sh
-libdir = ${exec_prefix}/lib
+libdir = /usr/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
